PRIMERA MODIFICACION DE LA PAGINA WE CON CSS

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@ daniel vale
 
 <!DOCTYPE html>
 <html lang="es">
+    <link rel="stylesheet" href="/style.css">
 <head>
     <meta charset="UTF-8">
     <title>PRIMERA PAGINA WEB</title>
@@ -15,10 +16,22 @@ daniel vale
     <hr/>
 
     <body>
-        <h1>PERFIL</h1>
+        <h2>PERFIL</h2>
 
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcReSlXXZr_cq1fVNyAifYyO6jLgqmHhfmg-Ww&s" width="200" height="200">
-    
-
+    <p>
+        Nombre: <label for="Nombre"></label>
+        <input type="text">
+        Edad: <label for="Edad"></label>
+        <input type="text">
+        Genero: <label for="Genero"></label>
+        <select id="Genero">
+            <option value="MASCULINO">MASCULINO</option>
+            <option value="FEMENINO">FEMENINO</option>
+            <option value="OTRO">OTRO</option>
+        </select>
+        <h3>informacion</h3><br>
+        <h4>Los datos ingresados hacen referrencia a la persona........ que tiene una edad de........ años y que es de sexo...........</h4>
+    </p>
 </body>
 </html>
